Bugzilla Bug 84568 xlib port does not support netscape plugins patch work by timecop@network.email.ne.jp and Roland.Mainz@informatik.med.uni-giessen.de r=timeless, sr=beard